--- a/Grantseattle/Views/Shared/_SubLayout.cshtml
+++ b/Grantseattle/Views/Shared/_SubLayout.cshtml
@@ -86,6 +86,9 @@
                                 <a href="@Url.Action("PropertyRegistration", "PropertyListing")"> Property Listing</a>
                             </li>
                             <li class="page-scroll">
+                                <a href="@Url.Action("Create", "Blog")"> Blog </a>
+                            </li>
+                            <li class="page-scroll">
                                 <a href="@Url.RouteUrl(MVC.RouteNames.Account.SignOut)">Sign Out</a>
                             </li>
                         }
