fixed some Route config Issue

--- a/Grantseattle/Views/Account/ForgotPassword.cshtml
+++ b/Grantseattle/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model SilentAction.Web.Models.ForgotPasswordModel
+﻿@model InventoryERP.Web.Models.ForgotPasswordModel
 @{
     ViewBag.Title = "Forgot Password";
     Layout = "~/Views/Shared/_SubLayout.cshtml";
@@ -26,7 +26,7 @@
                 <h4>Enter your email address and we'll email you a link to reset your password.</h4>
 
                 <div class="form forgot-password-form">
-                    @using (Html.BeginRouteForm(MVC.RouteNames.Account.ForgotPassword, FormMethod.Post, new { id = "frm" }))
+                    @using (Html.BeginForm("ForgotPassword","Account", FormMethod.Post, new { id = "frm" }))
                     {
                         <div class="field">
                             @Html.TextBoxFor(x => x.Email, new { @class="inputbox", size="25", placeholder="Email" })
