--- a/Grantseattle/Views/Account/SignIn.cshtml
+++ b/Grantseattle/Views/Account/SignIn.cshtml
@@ -42,7 +42,7 @@
                         <div class="clear"></div>
                     </div>
                     <div class="field">
-                        <a href="#@*@Url.RouteUrl(MVC.RouteNames.Account.ForgotPassword)*@">Forgot Password?</a>
+                        <a href="@Url.Action("ForgotPassword", "Account")">Forgot Password?</a>
                     </div>
                 }
 
