--- a/Grantseattle/Views/BlogPost/Create.cshtml
+++ b/Grantseattle/Views/BlogPost/Create.cshtml
@@ -1,10 +1,8 @@
 ﻿@model InvertoryERP.Core.Domain.BlogContent
-
 @{
     ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_SubLayout.cshtml";
 }
-
 
 <section class="container">
     <section class="panel panel-default">
@@ -13,74 +11,52 @@
         </div>
         <div class="panel-body">
             @using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+            {
+                @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>BlogContent</h4>
-        <hr />
-        @Html.ValidationSummary(true)
+                <div class="form-horizontal">
+                    <h4>BlogContent</h4>
+                    <hr />
+                    @Html.ValidationSummary(true)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Title, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Title)
-                @Html.ValidationMessageFor(model => model.Title)
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.BlogCategory, new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DropDownList("Category", (IEnumerable<SelectListItem>)ViewBag.Category, "Category", new { @class = "form-control", @required = "required" })
+                            @Html.ValidationMessageFor(model => model.BlogCategory)
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Title, new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Title)
+                            @Html.ValidationMessageFor(model => model.Title)
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Tags, new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Tags)
+                            @Html.ValidationMessageFor(model => model.Tags)
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Content, new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Content)
+                            @Html.ValidationMessageFor(model => model.Content)
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Post" class="btn btn-default" />
+                        </div>
+                    </div>
+                </div>
+            }
+            <div>
+                @Html.ActionLink("Back to List", "Index")
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Tags, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Tags)
-                @Html.ValidationMessageFor(model => model.Tags)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Content, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Content)
-                @Html.ValidationMessageFor(model => model.Content)
-            </div>
-        </div>
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.Status, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Status)
-                @Html.ValidationMessageFor(model => model.Status)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CreatedAt, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CreatedAt)
-                @Html.ValidationMessageFor(model => model.CreatedAt)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.UpdatedAt, new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UpdatedAt)
-                @Html.ValidationMessageFor(model => model.UpdatedAt)
-            </div>
-        </div>*@
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Post" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
         </div>
     </section>
 </section>
