Admin Panel Check

--- a/Grantseattle/Views/Account/ForgotPassword.cshtml
+++ b/Grantseattle/Views/Account/ForgotPassword.cshtml
@@ -23,7 +23,7 @@
                     </div>
                 }*@
                 
-                <h4>Enter your email address and we'll email you a link to reset your password.</h4>
+                <h4>Enter your email address and we'll email you password.</h4>
 
                 <div class="form forgot-password-form">
                     @using (Html.BeginForm("ForgotPassword","Account", FormMethod.Post, new { id = "frm" }))
@@ -35,8 +35,8 @@
                             </div>
                         </div>
                         <div class="field">
-                            <button class="btn btn-primary" type="submit">Sign In</button>&nbsp;&nbsp;
-                            <a class="btn" href="sign-in.html">Cancel</a>
+                            <button class="btn btn-primary" type="submit">Send</button>&nbsp;&nbsp;
+                            <a class="" href="@Url.Action("SignIn","Account")">Cancel</a>
                         </div>
                     }
                 </div>
