--- a/Grantseattle/Views/NewsPortal/Edit.cshtml
+++ b/Grantseattle/Views/NewsPortal/Edit.cshtml
@@ -27,30 +27,37 @@
                             @Html.ValidationMessageFor(model => model.Heading)
                         </div>
                     </div>
-
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Source, new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.Source)
+                            @Html.ValidationMessageFor(model => model.Source)
+                        </div>
+                    </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.NewsDescription, new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
-                            @Html.EditorFor(model => model.NewsDescription)
+                            @Html.TextAreaFor(model => model.NewsDescription, 10, 20, new { @class = "form-control" })
+                            @*@Html.EditorFor(model => model.NewsDescription)*@
                             @Html.ValidationMessageFor(model => model.NewsDescription)
                         </div>
                     </div>
 
-                    <div class="form-group">
+                    @*<div class="form-group">
                         @Html.LabelFor(model => model.CreatedAt, new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.CreatedAt)
                             @Html.ValidationMessageFor(model => model.CreatedAt)
                         </div>
-                    </div>
+                    </div>*@
 
-                    <div class="form-group">
+                    @*<div class="form-group">
                         @Html.LabelFor(model => model.UpdatedAt, new { @class = "control-label col-md-2" })
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.UpdatedAt)
                             @Html.ValidationMessageFor(model => model.UpdatedAt)
                         </div>
-                    </div>
+                    </div>*@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
