Client Panel Update

--- a/Grantseattle/Views/Shared/_Frontend.cshtml
+++ b/Grantseattle/Views/Shared/_Frontend.cshtml
@@ -118,7 +118,7 @@
                         <div class="navy">
                             <ul>
                                 <!-- Main menu -->
-                                <li><a id="home" href="#">Home</a></li>
+                                <li><a id="home" href="Client">Home</a></li>
                                 <li><a id="myFavourite" href="#">My Favorites</a></li>
                                 <li><a id="ourServices" href="#">Our Services</a></li>
                                 <li><a id="blog" href="#">Blog</a></li>
