--- a/Grantseattle/Views/Client/Index.cshtml
+++ b/Grantseattle/Views/Client/Index.cshtml
@@ -1,9 +1,284 @@
-﻿
+﻿@using InventoryERP.Service.Services.Services.Implementations
+@using InvertoryERP.Core.Domain
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Frontend.cshtml";
 }
+<div id="MainContentFromServer">
+    <div class="main-block real-estate">
+        <!-- property search big form -->
+        <div class="re-big-form">
+            <div class="container">
+                <h2>Find Your Dream Home</h2>
+                <!-- Nav tab style 2 starts -->
+                <div class="nav-tabs-two">
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs">
+                        <li class="active"><a href="#tab-1" data-toggle="tab">For Rent</a></li>
+                        <li><a href="#tab-2" data-toggle="tab">For Sale</a></li>
+                        <li><a href="#tab-3" data-toggle="tab">Agents</a></li>
+                    </ul>
+                    <!-- Tab content -->
+                    <div class="tab-content">
+                        <div class="tab-pane fade in active" id="tab-1">
+                            <form role="form">
+                                <div class="row">
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-12"> City </label>
+                                            <input type="text" class="form-control" id="cityName" placeholder="City Name">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-12">Enter Locality </label>
+                                            <input type="text" class="form-control" id="location" placeholder="Location">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-14">Property Type</label>
+                                            <select id="propType" class="form-control">
+                                                <option value="0" selected>Any</option>
+                                                @foreach (var pType in ViewBag.PROTYPE)
+                                                {
+                                                    <option value="@pType.Value">@pType.Text</option>
+                                                }
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-12">Bed Room</label>
+                                            <input type="text" class="form-control" id="bed" placeholder="Bed Rooms">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-12">Enter Minimum Price</label>
+                                            <input type="text" class="form-control" id="minPrice" placeholder="Min.Price">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-12">Enter Maximum Price</label>
+                                            <input type="text" class="form-control" id="maxPrice" placeholder="Max.Price">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-17">General Search</label>
+                                            <input type="text" class="form-control" id="generalSearch" placeholder="Type Something">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <button id="RentSearch" type="button" class="btn btn-color"><i class="fa fa-search"></i>&nbsp; Search Properties</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
 
+                        </div>
 
-<div class="main-block real-estate" id="MainContentFromServer">
+                        <div class="tab-pane fade" id="tab-2">
+
+                            <form role="form">
+                                <div class="row">
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-12"> City </label>
+                                            <input type="text" class="form-control" id="cityNameS" placeholder="City Name">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-12">Enter Locality </label>
+                                            <input type="text" class="form-control" id="locationS" placeholder="Location">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-14">Property Type</label>
+                                            <select id="propTypeS" class="form-control">
+                                                <option value="0" selected>Any</option>
+                                                @foreach (var pType in ViewBag.PROTYPE)
+                                                {
+                                                    <option value="@pType.Value">@pType.Text</option>
+                                                }
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-12">Bed Room</label>
+                                            <input type="text" class="form-control" id="bedS" placeholder="Bed Rooms">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-12">Enter Minimum Price</label>
+                                            <input type="text" class="form-control" id="minPriceS" placeholder="Min.Price">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-12">Enter Maximum Price</label>
+                                            <input type="text" class="form-control" id="maxPriceS" placeholder="Max.Price">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-17">General Search</label>
+                                            <input type="text" class="form-control" id="generalSearchS" placeholder="Type Something">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <button id="saleSearch" type="button" class="btn btn-color"><i class="fa fa-search"></i>&nbsp; Search Properties</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+
+                        </div>
+
+                        <div class="tab-pane fade" id="tab-3">
+                            <form role="form">
+                                <div class="row">
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-12"> City </label>
+                                            <input type="text" class="form-control" id="cityNameA" placeholder="City Name">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-12">Enter Locality </label>
+                                            <input type="text" class="form-control" id="locationA" placeholder="Location">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-14">Property Type</label>
+                                            <select id="propTypeA" class="form-control">
+                                                <option value="0" selected>Any</option>
+                                                @foreach (var pType in ViewBag.PROTYPE)
+                                                {
+                                                    <option value="@pType.Value">@pType.Text</option>
+                                                }
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-17">General Search</label>
+                                            <input type="text" class="form-control" id="generalSearchA" placeholder="Type Something">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <label for="input-12">Agent Name</label>
+                                            <input type="text" class="form-control" id="agentNameA" placeholder="Agent Name">
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-3 col-sm-6">
+                                        <div class="form-group">
+                                            <button id="agentSearch" type="button" class="btn btn-color"><i class="fa fa-search"></i>&nbsp; Search Properties</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container" id="searchResult">
+
+            <!-- Actual content -->
+            <div class="rs-property">
+                <br />
+                <!-- Block heading two -->
+                <div class="block-heading-two">
+                    <h3><span>Latest Coming Property</span></h3>
+                </div>
+                @{
+                    List<Propertys> propertyList = ViewBag.PropertyList;
+                    int jj = 0;
+                }
+                @for (int i = 0; i < propertyList.Count / 3 + 1; i++)
+                {
+                    int kk = 0;
+                    <div class="row">
+                        @for (; jj < propertyList.Count; jj++)
+                        {
+                            kk++;
+                            int fIndex = propertyList[jj].PropertyImageses[0].ImageUrl.IndexOf("Images", System.StringComparison.Ordinal);
+                            <div class="col-md-4 col-sm-4">
+                                <!-- Real estate property item -->
+                                <div class="property-item">
+                                    <div class="img-container">
+                                        <!-- Product Image -->
+                                        <img class="img-responsive" src="@propertyList[jj].PropertyImageses[0].ImageUrl.Substring(fIndex)" alt="" height="500px" width="400px" />
+                                        <span class="hover-top bg-color">@propertyList[jj].PropertyType.Name</span>
+                                        @*<span class="hover-bottom bg-red">Sale</span>*@
+                                    </div>
+                                    <!-- product title -->
+                                    <h4><a href="http://grantseattle.com">@propertyList[jj].PropertyDetails.StreetAddress1 - @propertyList[jj].PropertyDetails.StreetAddress2</a></h4>
+                                    <!-- product details -->
+                                    <div class="property-details">
+                                        <a class="ecom pull-right" href="#">More info</a>
+                                        <!-- price -->
+                                        <span class="price pull-left">$@propertyList[jj].Price</span>
+                                        <div class="clearfix"></div>
+                                    </div>
+                                    <!-- Info -->
+                                    <div class="p-info">
+                                        <a href="#">@propertyList[jj].PropertyDetails.BedCount</a>
+                                        <a href="#">3 @propertyList[jj].PropertyDetails.BathCount</a>
+                                        <a href="#">@propertyList[jj].PropertyDetails.AreaCount ft<sup>2</sup></a>
+                                        <div class="clearfix"></div>
+                                    </div>
+                                    <!-- Property Details List -->
+                                    <ul class="list-3">
+                                        <li>@propertyList[jj].PropertyDetails.BedCount Beds, @propertyList[jj].PropertyDetails.BathCount Bath</li>
+                                        <li><strong>Area</strong>: @propertyList[jj].PropertyDetails.AreaCount ft<sup>2</sup></li>
+                                        @*<li><strong>Lawn</strong>: 354ft<sup>2</sup></li>
+                                            <li><strong>Year</strong>: 2004</li>*@
+                                        <li><strong>Parking</strong>: @propertyList[jj].PropertyDetails.ParkingCount</li>
+                                        <li><strong>Status</strong>: @propertyList[jj].PropertyPurpose.Name</li>
+                                    </ul>
+                                    <div class="clearfix"></div>
+                                </div>
+                            </div>
+                            if (kk == 3)
+                            {
+                                jj = kk;
+                                break;
+                            }
+                        }
+                    </div>
+                }
+
+                <hr />
+
+                <!-- pagination -->
+                <ul class="pagination">
+                    <li class="disabled"><a href="#">«</a></li>
+                    <li class="active"><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li><a href="#">»</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
 </div>
