--- a/Grantseattle/Views/Search/_SearchResult.cshtml
+++ b/Grantseattle/Views/Search/_SearchResult.cshtml
@@ -41,7 +41,7 @@
                             <!-- Info -->
                             <div class="p-info">
                                 <a href="#">@propertyList[jj].PropertyDetails.BedCount</a>
-                                <a href="#">3 @propertyList[jj].PropertyDetails.BathCount</a>
+                                <a href="#">@propertyList[jj].PropertyDetails.BathCount</a>
                                 <a href="#">@propertyList[jj].PropertyDetails.AreaCount ft<sup>2</sup></a>
                                 <div class="clearfix"></div>
                             </div>
